--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -915,8 +915,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "top_travel_cities.append('Solta')"
